# aggwrap

./: .gitignore  .gitmodules  CMakeLists.txt
agg/: CMakeLists.txt  agg_math.h  agg_sqrt_tables.cpp
cmake/: constexpr.cmake  constexpr_test.cpp  delfunc.cmake  delfunc_test.cpp  inline.cmake  inline_test.c  nullptr.cmake  nullptr_test.cpp
inc/: AGGWrap.h
project/: CMakeLists.txt
src/: Bitmap.cpp  Bitmap.hpp  Brush.cpp  Brush.hpp  Buffer.cpp  Buffer.hpp  Context.cpp  Context.hpp  Font.cpp  Font.hpp  Path.cpp  Path.hpp  Pen.cpp  Pen.hpp  TTF.cpp  TTF.hpp  Types.cpp  Types.hpp  stb_image.c
